--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,21 @@
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 spring.sql.init.mode=always
 
-# TODO Append connection to DB
+spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
+spring.datasource.username=sharer
+spring.datasource.password=shareit
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+jdbc.driverClassName=org.postgresql.Driver
+jdbc.url=jdbc:postgresql://localhost:5432/shareit
+jdbc.username=sharer
+jdbc.password=shareit
+hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+hibernate.show_sql=true
 
 
 logging.level.org.springframework.orm.jpa=INFO
