--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,15 +5,12 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.sql.init.mode=always
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
-spring.datasource.username=sharer
-spring.datasource.password=shareit
-spring.datasource.driver-class-name=org.postgresql.Driver
+jdbc.driverClassName=org.h2.Driver
+jdbc.url=jdbc:h2:mem:shareit
+jdbc.username=test
+jdbc.password=test
 
-jdbc.driverClassName=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://localhost:5432/shareit
-jdbc.username=sharer
-jdbc.password=shareit
+
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql=true
 
