--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,13 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.show_sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.show_sql=true
 
 spring.sql.init.mode=always
 
-jdbc.driverClassName=org.h2.Driver
-jdbc.url=jdbc:h2:mem:shareit
-jdbc.username=test
-jdbc.password=test
-
-
-hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-hibernate.show_sql=true
-
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
+spring.datasource.username=sharer
+spring.datasource.password=shareit
 
 logging.level.org.springframework.orm.jpa=INFO
 logging.level.org.springframework.transaction=INFO
