--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,41 @@
 version: '3.8'
 services:
   gateway:
-    build:
-    image:
-    container_name:
+    build: ./gateway
+    container_name: shareit-gateway
     ports:
       - "8080:8080"
     depends_on:
+      - db
+      - server
     environment:
       - SHAREIT_SERVER_URL=http://server:9090
 
   server:
-    build:
-    image:
-    container_name:
+    build: ./server
+    container_name: shareit-server
     ports:
       - "9090:9090"
     depends_on:
+      - db
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/shareit
+      - DB_NAME=shareit
+      - POSTGRES_USER=sharer
+      - POSTGRES_PASSWORD=shareit
+      - DB_HOST=localhost
+      - DB_PORT=6541
+      - TZ="Europe/Moscow"
 
   db:
-    image:
-    container_name:
+    image: postgres:13.7-alpine
+    container_name: shareit-db
+    volumes:
+      - ./postgres_db:/var/lib/postgresql/data
     ports:
       - "6541:5432"
     environment:
+      - POSTGRES_DB=shareit
+      - POSTGRES_USER=sharer
+      - POSTGRES_PASSWORD=shareit
+      - PGDATA=/var/lib/postgresql/data/pgdata
